src/test/ui/self/elision/ref-mut-struct-async.nll.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/ref-mut-struct-async.rs:15:56
   |
LL |     async fn ref_Struct(self: &mut Struct, f: &u32) -> &u32 {
   |                                                        ^
   |
   = note: return-position elided lifetimes require exactly one input-position elided lifetime, found multiple.

error[E0106]: missing lifetime specifier
  --> $DIR/ref-mut-struct-async.rs:21:65
   |
LL |     async fn box_ref_Struct(self: Box<&mut Struct>, f: &u32) -> &u32 {
   |                                                                 ^
   |
   = note: return-position elided lifetimes require exactly one input-position elided lifetime, found multiple.

error[E0106]: missing lifetime specifier
  --> $DIR/ref-mut-struct-async.rs:27:65
   |
LL |     async fn pin_ref_Struct(self: Pin<&mut Struct>, f: &u32) -> &u32 {
   |                                                                 ^
   |
   = note: return-position elided lifetimes require exactly one input-position elided lifetime, found multiple.

error[E0106]: missing lifetime specifier
  --> $DIR/ref-mut-struct-async.rs:33:74
   |
LL |     async fn box_box_ref_Struct(self: Box<Box<&mut Struct>>, f: &u32) -> &u32 {
   |                                                                          ^
   |
   = note: return-position elided lifetimes require exactly one input-position elided lifetime, found multiple.

error[E0106]: missing lifetime specifier
  --> $DIR/ref-mut-struct-async.rs:39:74
   |
LL |     async fn box_pin_ref_Struct(self: Box<Pin<&mut Struct>>, f: &u32) -> &u32 {
   |                                                                          ^
   |
   = note: return-position elided lifetimes require exactly one input-position elided lifetime, found multiple.

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0106`.
